fix layout issue in new chrome

--- a/src/App.css
+++ b/src/App.css
@@ -22,4 +22,5 @@
 
 .App > main {
   display: flex;
+  min-height: 0;
 }
